# The-Big-Project

./: .gitignore  Makefile  README.md  skills-lock.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: cli.py  csrf.py  main.py  worker.py
backend/app/api/routes/: health.py
backend/app/auth/: cookies.py  dependencies.py  passwords.py  rate_limit.py  router.py  schemas.py  service.py  tokens.py
backend/app/boutique/: router.py  schemas.py  service.py  validation.py
backend/app/core/: config.py
backend/app/db/: rls.py  session.py  tenant.py
backend/app/db/repositories/: appointment_types.py  sessions.py  (+5 more)
backend/app/models/: appointment_type.py  audit_log.py  availability.py  base.py  constants.py  platform_audit_log.py  session.py  staff_user.py  tenant.py  terms_version.py
backend/app/platform/: repository.py  service.py
backend/app/tenancy/: middleware.py  resolver.py  slugs.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline_uuid_ossp.py  0002_tenants_app_role.py  0003_auth.py  0004_platform_audit.py  0005_boutique_settings.py
backend/tests/: conftest.py  test_app_import.py  test_auth_api.py  test_auth_integration.py  test_boutique_api.py  test_boutique_integration.py  test_boutique_models.py  test_boutique_service.py  test_boutique_validation.py  test_cli.py  test_config.py  test_health.py  test_middleware.py  test_migrations.py  test_passwords.py  test_provisioning.py  test_rate_limit.py  test_role_guard.py  test_slugs.py  test_tenancy_integration.py  test_tenant_isolation.py  test_tenants_repository.py
(+148 files in other folders)
