[project]
name = "boutique-backend"
version = "0.1.0"
description = "Boutique Platform API — multi-tenant SaaS for bridal boutiques"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic-settings>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "httpx>=0.28",
  "testcontainers[postgres]>=4.9",
  "ruff>=0.9",
  "mypy>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "db: needs a running Docker daemon (Testcontainers Postgres)",
]
